test/compilable/imports/test15966base.d
module pkg.test15966base;

class Base
{
    public import imports.test15966a;
    protected import imports.test15966b;
    package(pkg) import imports.test15966c;
}
